<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:orientation="vertical"
    android:id="@+id/notification_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imageViewCover"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_note"
            android:contentDescription="@string/cover"
            android:layout_marginEnd="10dp" />

        <LinearLayout
            android:id="@+id/linearLayoutTitleArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitre"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                style="@style/Text"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="20dp"
                android:text="@string/titre" />

            <TextView
                android:id="@+id/textViewArtist"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:maxLines="1"
                style="@style/Text"
                android:ellipsize="end"
                android:text="@string/artiste"
                android:layout_marginTop="4dp" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center">


        <ImageView
            android:id="@+id/imageViewPrevious"
            android:layout_width="55dp"
            android:layout_height="55dp"
            style="@style/fillSVG"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_previous"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/imageViewPlay"
            android:layout_width="70dp"
            style="@style/fillSVG"
            android:layout_height="70dp"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play" />

        <ImageView
            android:id="@+id/imageViewNext"
            android:layout_width="55dp"
            android:layout_height="55dp"
            style="@style/fillSVG"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_next"
            android:layout_marginStart="10dp" />

    </LinearLayout>

</LinearLayout>
