<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="25dp"
    style="@style/Background">

    <TextView
        android:id="@+id/textView5"
        style="@style/BasicTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/playlist"
        app:layout_constraintStart_toStartOf="@+id/editTextTitre"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTitre"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        style="@style/Text"
        android:hint="@string/titre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonCreer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cr_er"
        style="@style/Button"
        android:background="@drawable/round_button_gradient"
        app:layout_constraintEnd_toEndOf="@+id/editTextTitre"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitre" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/annuler"
        android:background="@drawable/rounded_button_secondary"
        app:layout_constraintEnd_toStartOf="@+id/buttonCreer"
        app:layout_constraintTop_toTopOf="@+id/buttonCreer" />


</androidx.constraintlayout.widget.ConstraintLayout>