<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    style="@style/Background"
    android:elevation="8dp">

    <ImageView
        android:id="@+id/imageViewClearDialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_clear"
        android:contentDescription="@string/clear"
        style="@style/fillSVG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/BasicTitre"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/ajouter_une_playlist"
        app:layout_constraintEnd_toStartOf="@+id/imageViewClearDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewClearDialog" />

    <TextView
        android:id="@+id/textView4"
        style="@style/BasicText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/playlists"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ListView
        android:id="@+id/listViewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreerPlaylist"
        />

    <Button
        android:id="@+id/buttonCreerPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/round_button_gradient"
        android:text="@string/plus_playlist"
        android:textSize="20sp"
        style="@style/Button"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>