<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView"
                android:layout_width="158dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                style="@style/TitreSection"
                android:text="@string/param_tres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:id="@+id/buttonReloadFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharger_les_fichiers"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button_secondary"
                app:layout_constraintEnd_toStartOf="@+id/buttonCreer"
                app:layout_constraintTop_toTopOf="@+id/buttonCreer" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_nuit"
                    android:layout_gravity="center"
                    style="@style/Text"/>
                <Switch
                    style="@style/Swicth"
                    android:checked="true"
                    android:id="@+id/switchMode"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/automatique"
                    android:layout_gravity="center"
                    style="@style/Text"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>