<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    >

    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="75dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_note"
        android:contentDescription="@string/cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toEndOf="@+id/coverImage"
        app:layout_constraintTop_toTopOf="@+id/coverImage"
        android:descendantFocusability="blocksDescendants">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="1500dp"
            android:layout_height="24dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/titre"
            style="@style/Text"
            android:ellipsize="none"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nText"
            android:layout_width="1500dp"
            android:layout_height="23dp"
            android:layout_below="@id/titleText"
            android:ellipsize="none"
            android:text="@string/n_titres"
            style="@style/Text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>